5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_1800.log
== SUBMITION (2019-04-04 01:28:15) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print=(round(d,7))
-- EXECUTION TIME:
0.128355
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 01:28:32) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print=(round(d,7))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 01:28:41) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print=(round(d,7))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 01:28:44) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print=(round(d,7))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 01:29:25) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print=(round(d,7))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 01:33:05) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 01:43:12) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 01:43:51) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
-- EXECUTION TIME:
0.129222
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 01:44:43) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
-- EXECUTION TIME:
0.211325
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 01:45:17) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7)
-- EXECUTION TIME:
0.120405
-- ERROR:
  File "/home/codebench/codes/1613/1800/main.py", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 01:45:18) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7)
-- EXECUTION TIME:
0.160629
-- ERROR:
  File "/home/codebench/codes/1613/1800/main.py", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 01:45:28) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
-- EXECUTION TIME:
0.15973
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:16:55) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
-- EXECUTION TIME:
0.210058
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
